# pytorch-sandbox

./: pyproject.toml
multi-gpu/gpt2-ddp/: gpt2_ddp.py
profiling/: README.md
profiling/activation-recomputation/: activation-recomputation.py
profiling/activation-recomputation/profiler-output/no-checkpoints-num-workers-4-batch-size-512/: key_averages.txt  memory-no-checkpoints-num-workers-4-batch-size-512.html
profiling/activation-recomputation/profiler-output/with-checkpoints-num-workers-4-batch-size-512/: key_averages.txt  memory-with-checkpoints-num-workers-4-batch-size-512.html
profiling/backward-imbalance/: train_gpt2.py
profiling/backward-imbalance/profiler-output/mixed-precision-num-workers-8-batch-size-48/: key_averages.txt
profiling/data-bottleneck/: data-bottleneck.py
profiling/data-bottleneck/profiler-output/num-workers-0-batch-size-16/: key_averages.txt  memory-num-workers-0-batch-size-16.html  trace-num-workers-0-batch-size-16.json
profiling/data-bottleneck/profiler-output/num-workers-0-batch-size-2056/: key_averages.txt  memory-num-workers-0-batch-size-2056.html
profiling/data-bottleneck/profiler-output/num-workers-8-batch-size-16/: key_averages.txt  memory-num-workers-8-batch-size-16.html  trace-num-workers-8-batch-size-16.json
profiling/data-bottleneck/profiler-output/num-workers-8-batch-size-2056/: key_averages.txt  (+2 more)
profiling/kernle-launch-overhead/: kernel-launch-overhead.py
profiling/mixed-precision-training/: train-mixed-precision.py  train_gpt2.py  train_mixed_precision.py
profiling/sync-issues/: sync-issues.py
(+6 files in other folders)
