[project]
name = "pytorch-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
